// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/item-details/EditableDescription should render default component 1`] = `
<ForwardRef(TextareaAutosize)
  className="description-textarea"
  data-resin-target="description"
  maxLength="255"
  maxRows={6}
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="message"
  value=""
/>
`;

exports[`features/item-details/EditableDescription should set default value and additional props when specified 1`] = `
<ForwardRef(TextareaAutosize)
  className="description-textarea"
  maxLength="255"
  maxRows={6}
  minLength={25}
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="message"
  value="description"
/>
`;
